Fix text-align

--- a/html-and-css/styles.css
+++ b/html-and-css/styles.css
@@ -2,6 +2,6 @@ div {
     background-color: red;
     font-size: 32px;
     color: white;
-    align: center;
+    text-align: center;
     font-weight: bold
 }
